<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    
    <string name="button_equal">=</string>
    <string name="button_clear">C</string>
    <string name="button_delete">D</string>
    
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_add">+</string>
    <string name="button_minus">-</string>
    <string name="button_decimal">.</string>
    
    <color name="backgroundC">#000000</color>
    <color name="textC">#FFFFFF</color>

</resources>