<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundC"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onClick"
        android:text="@string/button_nine" 
        android:textColor="@color/textC"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button9"
        android:layout_toLeftOf="@+id/button9"
        android:onClick="onClick"
        android:text="@string/button_eight" 
        android:textColor="@color/textC"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button9"
        android:layout_toRightOf="@+id/button8"
        android:onClick="onClick"
        android:text="@string/button_six" 
        android:textColor="@color/textC"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button6"
        android:layout_toLeftOf="@+id/button6"
        android:onClick="onClick"
        android:text="@string/button_five" 
        android:textColor="@color/textC"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:onClick="onClick"
        android:text="@string/button_three" 
        android:textColor="@color/textC" />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonMinus"
        android:layout_below="@+id/button4"
        android:onClick="onClick"
        android:text="/"
        android:textColor="@color/textC" />

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:onClick="onClick"
        android:text="*"
        android:textColor="@color/textC" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonPlus"
        android:layout_alignRight="@+id/buttonPlus"
        android:layout_below="@+id/button0"
        android:onClick="onClick"
        android:text="-"
        android:textColor="@color/textC" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button0"
        android:layout_alignBottom="@+id/button0"
        android:layout_alignLeft="@+id/numberField"
        android:onClick="onClick"
        android:text="+"
        android:textColor="@color/textC" />

    <Button
        android:id="@+id/buttonDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button3"
        android:layout_below="@+id/buttonPoint"
        android:onClick="onClick"
        android:text="del"
        android:textColor="@color/textC" />

    <Button
        android:id="@+id/buttonEq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonClear"
        android:layout_alignRight="@+id/buttonDel"
        android:layout_toRightOf="@+id/button0"
        android:onClick="onClick"
        android:text="="
        android:textColor="@color/textC" />

    <Button
        android:id="@+id/buttonPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonPlus"
        android:layout_alignLeft="@+id/buttonPlus"
        android:layout_alignRight="@+id/buttonPlus"
        android:onClick="onClick"
        android:text="."
        android:textColor="@color/textC" />

    <EditText
        android:id="@+id/numberField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonEq"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/buttonEq"
        android:editable="false"
        android:ems="10"
        android:text="5+4*2-3"
        android:textColor="@color/textC" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/historyField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/numberField"
        android:layout_alignLeft="@+id/numberField"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/numberField"
        android:layout_marginTop="12dp"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:selectAllOnFocus="false"
        android:textColor="@color/textC"
        android:textIsSelectable="false" />

    <!--  android:inputType="textMultiLine"-->

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_toRightOf="@+id/buttonMul"
        android:onClick="onClick"
        android:text="@string/button_one"
        android:textColor="@color/textC" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button7"
        android:layout_toLeftOf="@+id/buttonClear"
        android:onClick="onClick"
        android:text="@string/button_four"
        android:textColor="@color/textC" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_toLeftOf="@+id/buttonClear"
        android:onClick="onClick"
        android:text="@string/button_seven"
        android:textColor="@color/textC" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button5"
        android:layout_alignRight="@+id/button5"
        android:layout_marginRight="33dp"
        android:onClick="onClick"
        android:text="@string/button_two"
        android:textColor="@color/textC" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignRight="@+id/button5"
        android:layout_marginRight="16dp"
        android:onClick="onClick"
        android:text="c"
        android:textColor="@color/textC" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_toLeftOf="@+id/button2"
        android:onClick="onClick"
        android:text="0"
        android:textColor="@color/textC" />

</RelativeLayout>